# unterwhisper

./: README.md  index.html  package.json  pnpm-lock.yaml
.kiro/specs/background-transcription/: design.md  requirements.md  tasks.md
.kiro/specs/microphone-selection/: design.md  requirements.md  tasks.md
.kiro/specs/onnx-transcriber/: design.md  requirements.md  tasks.md
src/: App.tsx  DeviceSelector.tsx  SettingsDialog.css  SettingsDialog.tsx  TranscriptionWindow.css  TranscriptionWindow.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/asr/: audio.rs  config.rs  dsp.rs  lib.rs  mod.rs  onnx.rs  transcribe.rs  whisper.rs
