[package]
name = "unterwhisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unterwhisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
global-hotkey = "0.7"
log = "0.4"
arboard = "3.4"
enigo = "0.2"
dirs = "5.0"
anyhow = "1.0"
ringbuf = "0.4"
crossbeam-channel = "0.5"
bytemuck = "1.14"
candle-core = { version = "0.9.1" }
candle-transformers = "0.9.1"
candle-nn = "0.9.1"
clap = { version = "4.x", features = ["derive"] }
cpal = "0.17"
hf-hub = "0.4"
num-complex = "0.4"
rand = "0.8"
realfft = "3.3"
tracing = "0.1"
tokenizers = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1"

[dev-dependencies]
proptest = "1.9.0"
